// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dead_code_deletion.asm 1`] = `
{
  "0": {
    "op": "set_reg",
  },
  "1": {
    "next": 1,
    "op": "set_reg",
  },
  "parameters": [],
}
`;

exports[`empty.asm 1`] = `
{
  "name": "foo",
  "parameters": [],
}
`;

exports[`issue2.asm 1`] = `
{
  "0": {
    "0": -1,
    "1": -1,
    "next": 1,
    "op": "set_reg",
  },
  "name": "foo",
  "parameters": [],
}
`;

exports[`label.asm 1`] = `
{
  "0": {
    "0": {
      "id": "v_letter_A",
      "num": 1,
    },
    "1": "A",
    "op": "set_reg",
  },
  "1": {
    "0": "A",
    "op": "jump",
  },
  "2": {
    "0": {
      "id": "v_letter_A",
    },
    "op": "label",
  },
  "3": {
    "op": "notify",
    "txt": "0",
  },
  "4": {
    "op": "exit",
  },
  "5": {
    "0": {
      "id": "v_letter_A",
      "num": 1,
    },
    "op": "label",
  },
  "6": {
    "op": "notify",
    "txt": "1",
  },
  "7": {
    "next": false,
    "op": "exit",
  },
  "parameters": [],
}
`;

exports[`nil_dest.asm 1`] = `
{
  "0": {
    "0": {
      "num": 1,
    },
    "next": false,
    "op": "set_reg",
  },
  "parameters": [],
}
`;

exports[`out_of_order.asm 1`] = `
{
  "0": {
    "0": {
      "id": "v_letter_A",
    },
    "next": false,
    "op": "jump",
  },
  "1": {
    "0": {
      "id": "v_letter_A",
    },
    "op": "label",
  },
  "2": {
    "op": "notify",
    "txt": "again",
  },
  "3": {
    "0": {
      "id": "v_letter_A",
    },
    "next": false,
    "op": "jump",
  },
  "parameters": [],
}
`;

exports[`recurse_main.asm 1`] = `
{
  "0": {
    "next": false,
    "op": "call",
    "sub": 0,
  },
  "name": "foo",
  "parameters": [],
}
`;
